# NekoFollow

./: .aw-multicat-debug-backup.patch  .gitignore  README.md  index.html  package-lock.json  package.json  pet.html  vite.config.ts
src/: main.ts  pet.css  pet.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
