[package]
name = "neko-runner"
version = "0.1.0"
description = "A desktop cat companion built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "neko_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
device_query = "4"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
